--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="zh">
 
 <head>
-    <title>恰掉小黛拉</title>
-    <meta itemprop="name" content="恰掉小黛拉" />
+    <title>恰掉Estella</title>
+    <meta itemprop="name" content="恰掉Estella" />
     <meta itemprop="description" content="新概念音游" />
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, width=device-width,target-densitydpi=device-dpi" />
@@ -67,7 +67,7 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text">标题</span>
                     </div>
-                    <input type="text" id="title" class="form-control" placeholder="恰掉小黛拉">
+                    <input type="text" id="title" class="form-control" placeholder="恰掉Estella">
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
